test/langtools/tools/javac/annotations/neg/pkg/package-info.out
package-info.java:12:20: compiler.err.expression.not.allowable.as.annotation.value
1 error
